--- a/index.html
+++ b/index.html
@@ -447,6 +447,8 @@
     <!-- footer -->
     <footer class="ftr">
       <div class="container ftr-container">
+        <!-- link -->
+
         <div class="ftr-link-wrap">
           <a class="ftr-link" href="./index.html"
             >Web<span class="ftr-right">Studio</span></a
@@ -456,6 +458,9 @@
             digital marketing & growth solutions.
           </p>
         </div>
+
+        <!-- ftr social -->
+
         <div class="ftr-social">
           <p class="ftr-head">Social media</p>
           <ul class="ftr-icons">
@@ -489,7 +494,126 @@
             </li>
           </ul>
         </div>
+
+        <!-- ftr subs-->
+
+        <div class="ftr-subs">
+          <p class="ftr-subs-head">Subscribe</p>
+          <form class="ftr-subs-form">
+            <label aria-label="footer-email">
+              <input
+                type="text"
+                name="ftr-email"
+                id="ftr-email"
+                placeholder="E-mail"
+                class="ftr-input"
+              />
+            </label>
+            <button type="submit" class="ftr-btn">
+              Subscribe
+              <svg class="ftr-btn-icon" width="24" height="28">
+                <use href="./images/icons.svg#ftr-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <!-- modal -->
+
+    <div class="modal-backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#modal-close"></use>
+          </svg>
+        </button>
+        <p class="modal-header">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="modal-form-label">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                id="user-name"
+              />
+              <div class="modal-icon-wrap">
+                <svg class="modal-icon" width="12" height="12">
+                  <use href="./images/icons.svg#modal-name"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-phone" class="modal-form-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-phone"
+                id="user-phone"
+              />
+              <div class="modal-icon-wrap">
+                <svg class="modal-icon" width="13" height="13">
+                  <use href="./images/icons.svg#modal-phone"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-form-label">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                class="modal-input"
+                name="user-email"
+                id="user-email"
+              />
+              <div class="modal-icon-wrap">
+                <svg class="modal-icon" width="15" height="12">
+                  <use href="./images/icons.svg#modal-email"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-field modal-field-ta">
+            <label for="user-comment" class="modal-form-label">Comment</label>
+            <textarea
+              placeholder="Text input"
+              class="modal-textarea"
+              name="user-comment"
+              id="user-comment"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              class="modal-checkbox"
+              name="policy"
+              id="policy"
+              visually
+              hidden
+            />
+            <label for="policy" class="modal-form-label-chek"
+              ><span>
+                <svg class="modal-icon-chek" width="10" height="8">
+                  <use href="./images/icons.svg#modal-chek"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp;
+              <a href=""> Privacy Policy</a></label
+            >
+          </div>
+
+          <button type="submit" class="modal-form-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
