--- a/index.html
+++ b/index.html
@@ -594,11 +594,9 @@
           <div class="modal-field">
             <input
               type="checkbox"
-              class="modal-checkbox"
+              class="modal-checkbox visually-hidden"
               name="policy"
               id="policy"
-              visually
-              hidden
             />
             <label for="policy" class="modal-form-label-chek"
               ><span>
