--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
         <div class="ftr-subs">
           <p class="ftr-subs-head">Subscribe</p>
           <form class="ftr-subs-form">
-            <label aria-label="footer-email">
+            <label class="ftr-subs-label" aria-label="footer-email">
               <input
-                type="text"
+                type="email"
                 name="ftr-email"
                 id="ftr-email"
                 placeholder="E-mail"
@@ -511,7 +511,7 @@
             </label>
             <button type="submit" class="ftr-btn">
               Subscribe
-              <svg class="ftr-btn-icon" width="24" height="28">
+              <svg class="ftr-btn-icon" width="24" height="24">
                 <use href="./images/icons.svg#ftr-telegram"></use>
               </svg>
             </button>
