--- a/index.html
+++ b/index.html
@@ -542,11 +542,11 @@
                 name="user-name"
                 id="user-name"
               />
-              <div class="modal-icon-wrap">
+              <span class="modal-icon-wrap">
                 <svg class="modal-icon" width="12" height="12">
                   <use href="./images/icons.svg#modal-name"></use>
                 </svg>
-              </div>
+              </span>
             </div>
           </div>
           <div class="modal-field">
@@ -558,11 +558,11 @@
                 name="user-phone"
                 id="user-phone"
               />
-              <div class="modal-icon-wrap">
+              <span class="modal-icon-wrap">
                 <svg class="modal-icon" width="13" height="13">
                   <use href="./images/icons.svg#modal-phone"></use>
                 </svg>
-              </div>
+              </span>
             </div>
           </div>
           <div class="modal-field">
@@ -574,11 +574,11 @@
                 name="user-email"
                 id="user-email"
               />
-              <div class="modal-icon-wrap">
+              <span class="modal-icon-wrap">
                 <svg class="modal-icon" width="15" height="12">
                   <use href="./images/icons.svg#modal-email"></use>
                 </svg>
-              </div>
+              </span>
             </div>
           </div>
 
