--- a/index.html
+++ b/index.html
@@ -542,11 +542,10 @@
                 name="user-name"
                 id="user-name"
               />
-              <span class="modal-icon-wrap">
-                <svg class="modal-icon" width="12" height="12">
-                  <use href="./images/icons.svg#modal-name"></use>
-                </svg>
-              </span>
+
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#modal-name-2"></use>
+              </svg>
             </div>
           </div>
           <div class="modal-field">
@@ -558,11 +557,10 @@
                 name="user-phone"
                 id="user-phone"
               />
-              <span class="modal-icon-wrap">
-                <svg class="modal-icon" width="13" height="13">
-                  <use href="./images/icons.svg#modal-phone"></use>
-                </svg>
-              </span>
+
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#modal-phone-2"></use>
+              </svg>
             </div>
           </div>
           <div class="modal-field">
@@ -574,11 +572,10 @@
                 name="user-email"
                 id="user-email"
               />
-              <span class="modal-icon-wrap">
-                <svg class="modal-icon" width="15" height="12">
-                  <use href="./images/icons.svg#modal-email"></use>
-                </svg>
-              </span>
+
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#modal-email-2"></use>
+              </svg>
             </div>
           </div>
 
