--- a/index.html
+++ b/index.html
@@ -588,21 +588,23 @@
               id="user-comment"
             ></textarea>
           </div>
-          <div class="modal-field">
+
+          <div class="modal-field modal-field-last">
             <input
               type="checkbox"
               class="modal-checkbox visually-hidden"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label for="policy" class="modal-form-label-chek"
-              ><span>
+            <label for="user-privacy" class="modal-form-label-chek"
+              ><span class="modal-form-chek-span">
                 <svg class="modal-icon-chek" width="10" height="8">
                   <use href="./images/icons.svg#modal-chek"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
-              <a href=""> Privacy Policy</a></label
+              <a href="" class="modal-form-chek-a"> Privacy Policy</a></label
             >
           </div>
 
